--- a/hello-react.html
+++ b/hello-react.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World</title>
+    <title>Hello REACT</title>
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
@@ -12,7 +12,7 @@
     <script type="text/babel">
 
       ReactDOM.render(
-        <h1>Hello, world!</h1>,
+        <h1>Hello REACT!</h1>,
         document.getElementById('root')
       );
 
